<resources>
    <string name="app_name">Travel Diaries</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="user_name">User</string>


    <string name="edit_profile">Edit Profile</string>
    <string name="text_name">Name</string>
    <string name="text_mobile">Mobile number</string>
    <string name="text_email">Email id</string>
    <string name="text_address">Address</string>
    <string name="text_description">Description</string>
</resources>
